Update the test from repository to service