@@ -1,7 +1,6 @@
 package absent_minded.absent_minded.controllers;
 
 import absent_minded.absent_minded.models.Project;
-import absent_minded.absent_minded.repositories.ProjectRepository;
 import absent_minded.absent_minded.services.AuthService;
 import absent_minded.absent_minded.services.ProjectService;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -16,7 +15,8 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.*;
 
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -28,9 +28,6 @@ public class ProjectControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
-
-    @MockitoBean
-    private ProjectRepository projectRepository;
 
     @MockitoBean
     private AuthService auth;
@@ -57,9 +54,7 @@ public class ProjectControllerTest {
         p3.setName("Project C");
         p3.setOwnerId("user1");
 
-        when(auth.emailFromAuthHeader("Bearer test-token")).thenReturn("user1");
-        when(projectRepository.findAllByOwnerId("user1")).thenReturn(Arrays.asList(p1, p3));
-        when(projectRepository.findAllByParticipantsContains("user1")).thenReturn(Collections.emptyList());
+        when(projectService.getAllProjects("Bearer test-token")).thenReturn(Arrays.asList(p1, p3));
 
         mockMvc.perform(get("/api/projects").header("Authorization", "Bearer test-token"))
                 .andExpect(status().isOk())
@@ -89,20 +84,21 @@ public class ProjectControllerTest {
     public void testCreateProject() throws Exception {
         Project input = new Project();
         input.setName("New Project");
-        // ownerId will be set by controller
+
         Project saved = new Project();
         saved.setId("123");
         saved.setName("New Project");
         saved.setOwnerId("user1");
 
-        when(auth.emailFromAuthHeader("Bearer test-token")).thenReturn("user1");
-        when(projectRepository.save(any(Project.class))).thenReturn(saved);
+        when(projectService.createProject(eq("Bearer test-token"), any(Project.class)))
+                .thenReturn(saved);
 
         mockMvc.perform(post("/api/projects")
                         .header("Authorization", "Bearer test-token")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(input)))
                 .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value("123"))
                 .andExpect(jsonPath("$.name").value("New Project"))
                 .andExpect(jsonPath("$.ownerId").value("user1"));
@@ -120,9 +116,8 @@ public class ProjectControllerTest {
         updated.setName("Updated Name");
         updated.setOwnerId("user1");
 
-        when(auth.emailFromAuthHeader("Bearer test-token")).thenReturn("user1");
-        when(projectRepository.findByIdAndOwnerId("123", "user1")).thenReturn(Optional.of(existing));
-        when(projectRepository.save(any(Project.class))).thenReturn(updated);
+        when(projectService.updateProject(eq("Bearer test-token"), eq("123"), any(Project.class)))
+                .thenReturn(updated);
 
         mockMvc.perform(put("/api/projects/123")
                         .header("Authorization", "Bearer test-token")
@@ -134,47 +129,47 @@ public class ProjectControllerTest {
 
     @Test
     public void testDeleteProject() throws Exception {
-        when(auth.emailFromAuthHeader("Bearer test-token")).thenReturn("user1");
-        when(projectRepository.deleteByIdAndOwnerId("1", "user1")).thenReturn(1);
+        doNothing()
+                .when(projectService)
+                .deleteProject(eq("Bearer test-token"), eq("1"));
 
-        mockMvc.perform(delete("/api/projects/1").header("Authorization", "Bearer test-token"))
+        mockMvc.perform(delete("/api/projects/1")
+                        .header("Authorization", "Bearer test-token"))
                 .andExpect(status().isNoContent());
     }
 
     @Test
     public void testAddParticipant() throws Exception {
-        Project project = new Project();
-        project.setId("1");
-        project.setName("Project A");
-        project.setOwnerId("user1");
-        project.setParticipants(new ArrayList<>());
-
-        Project withNew = new Project();
-        withNew.setId("1");
-        withNew.setName("Project A");
-        withNew.setOwnerId("user1");
-        withNew.setParticipants(Arrays.asList("user2"));
-
-        when(auth.emailFromAuthHeader("Bearer test-token")).thenReturn("user1");
-        when(projectRepository.findById("1")).thenReturn(Optional.of(project));
-        when(projectRepository.save(any(Project.class))).thenReturn(withNew);
-
         Map<String, String> body = Collections.singletonMap("email", "user2");
+
+        Project updated = new Project();
+        updated.setId("1");
+        updated.setName("Project A");
+        updated.setOwnerId("user1");
+        updated.setParticipants(List.of("user2"));
+
+        when(projectService.addParticipant(
+                eq("Bearer test-token"),
+                eq("1"),
+                anyMap()
+        )).thenReturn(updated);
+
         mockMvc.perform(post("/api/projects/1/participants")
                         .header("Authorization", "Bearer test-token")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(body)))
                 .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.participants[0]").value("user2"));
     }
 
     @Test
     public void testRemoveParticipant() throws Exception {
-        Project project = new Project();
-        project.setId("1");
-        project.setName("Project A");
-        project.setOwnerId("user1");
-        project.setParticipants(new ArrayList<>(Arrays.asList("user2", "user3")));
+        Project before = new Project();
+        before.setId("1");
+        before.setName("Project A");
+        before.setOwnerId("user1");
+        before.setParticipants(new ArrayList<>(List.of("user2", "user3")));
 
         Project afterRemoval = new Project();
         afterRemoval.setId("1");
@@ -182,9 +177,11 @@ public class ProjectControllerTest {
         afterRemoval.setOwnerId("user1");
         afterRemoval.setParticipants(Collections.singletonList("user3"));
 
-        when(auth.emailFromAuthHeader("Bearer test-token")).thenReturn("user1");
-        when(projectRepository.findById("1")).thenReturn(Optional.of(project));
-        when(projectRepository.save(any(Project.class))).thenReturn(afterRemoval);
+        when(projectService.removeParticipant(
+                eq("Bearer test-token"),
+                eq("1"),
+                anyMap()
+        )).thenReturn(afterRemoval);
 
         Map<String, String> body = Collections.singletonMap("email", "user2");
         mockMvc.perform(delete("/api/projects/1/participants")
@@ -192,6 +189,7 @@ public class ProjectControllerTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(body)))
                 .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.participants.size()").value(1))
                 .andExpect(jsonPath("$.participants[0]").value("user3"));
     }
